tests/paczka1/small_fuzzy/61786543.err
Error in line 3: H8fvK5Y S984 41,86
Error in line 10: vQozGa4o S984 69,9
